--- a/exercise1.html
+++ b/exercise1.html
@@ -27,6 +27,6 @@
         <footer>
             <p>Footer</p>
         </footer>
-        jaseel kottadakka
+        jaseel kollodika
 </body>
 </html>
