--- a/Form/Form.html
+++ b/Form/Form.html
@@ -25,7 +25,16 @@
             <option>+2</option>
             <option>graduated</option>
             <option>Post graduated</option>
-        </select>
+        </select><br>
+        <label>Skills</label>
+        <input type="checkbox">
+        <label>HTML</label>
+        <input type="checkbox">
+        <label>CSS</label>
+        <input type="checkbox">
+        <label>Javascript</label>
+        <br>
+        <input type="Submit">
     </form>
 </body>
 </html>
