--- a/Media/Media.html
+++ b/Media/Media.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <video>
-        <Source src="video.mov></Source>
+    <video width="300px" height="300px" controls>
+        <Source src="video.mov"></Source>
     </video>
+    <audio controls>
+        <source src="sample.mp3"></source>
+    
+
+    </audio>
 </body>
 </html>
