--- a/Div Practice/DivPractice.html
+++ b/Div Practice/DivPractice.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DivPractice</title>
+    <link rel="stylesheet" href="DivStyle.css">
 </head>
 <body>
+    <div class="Outer-box">
+    
+        <div class="box1">
+            <p>Hello HTML</p>
+
+        </div>
+        <div class="box2">
+
+        </div>
+        <div class="box3">
+
+        </div>
+        <div class="box4">
+
+        </div>
+
+    </div>
+
     
 </body>
 </html>
