--- a/Assignment/Task1/course.html
+++ b/Assignment/Task1/course.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="course.css">
 </head>
 <body>
+  <div>
+    <div class="container">
+      <div class="header"></div>
+      <a href="Main Page.html"> <!--give the name of page that logo wanted to redirect-->
+      <div class="logo"></div>
+    </div></a><br><br><br> 
+  </div>
   <table>
     <caption>BSc Courses</caption>
     <thead>
